--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             </div>
             <div class="col">
                     <h1>Jocose Tie</h1>
-                    <h3> Ties and bowties handcrafted with love </br>
-                       for passionate fashion
-                      lovers</h3>
+                    <h3>Ties and bowties handcrafted with love</br> for passionate fashion lovers</h3>
 
           </div>
         </div>
@@ -85,7 +83,7 @@
     <section class="jumbotron text-center">
       <div class="container">
         <h1 class="jumbotron-heading">Jocose Tie Blog</h1> </br>
-        <p class="lead text-muted">"Do WE love accesories? Yes. </br>"Do WE know the secret to sew the most orginal ones? You bet.”</p>
+        <p class="lead text-muted">"Do WE love accesories? Yes. </br>"Do WE know the secret to sew the most orginal ones? You bet!”</p>
 
       </div>
     </section>
@@ -135,26 +133,26 @@
           </div>
           </div>
 
-          <footer class="site-footer">
+          <footer class="page-footer fixed-bottom">
             <div class="container">
                 <div class="row">
                     <div class="col-4 col-sm-2 offset-1">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="aboutus.html">Women</a></li>
-                            <li><a href="#">Me</a></li>
-                            <li><a href="contactus.html">Contact</a></li>
+                            <li><a href="#" style="color:white;">Home</a></li>
+                            <li><a href="aboutus.html" style="color:white;">Women</a></li>
+                            <li><a href="#"style="color:white;">Men</a></li>
                         </ul>
                     </div>
-                    <div class="col-6 col-sm-5 text-center">
+                    <div class="col-4 col-sm-5 text-center">
                         <h5>Social</h5>
                         <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <a role="button" class="btn btn-link" href="tel:+420602709269"><i class="fa fa-phone"></i> +420-602-709-269</a><br />
-                        <a role="button" class="btn btn-link" href="mailto:info@jocosetie.com"><i class="fa fa-envelope-o"></i> info@jocosetie.com</a>
+                        <a role="button" class="btn btn-link text-white" href="tel:+420602709269"><i class="fa fa-phone"></i> +420-602-709-269</a><br />
+                        <a role="button" class="btn btn-link text-white" href="mailto:info@jocosetie.com"><i class="fa fa-envelope-o"></i> info@jocosetie.com</a>
                     </div>
                </div>
             </div>
