--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 </head>
 
 <body>
-  <header>
-    <div class="jumbotron jumbotron-fluid" id="hed">
+  <header class="jumbotron jumbotron-fluid" id="hed">
       <div class="container">
         <div class="row">
           <div class="col-4 col-sm-3 col-md-2 align-self-center">
@@ -36,21 +35,17 @@
             </div>
             <div class="col">
                     <h1>Jocose Tie</h1>
-                    <h3>Ties and bowties handcrafted with love</br> for passionate fashion lovers</h3>
-
-          </div>
+                    <h3>Ties and bowties handcrafted with love</br>for passionate fashion lovers</h3>
+            </div>
+        <div class="col-md-4 col-xl-2 mt-4">
+            <a href="https://www.etsy.com/shop/JocoseTie?ref=search_shop_redirect" target="_blank" class="btn btn-light btn-lg active" role="button" aria-pressed="true" id="headerA"><i class="fa fa-shopping-bag"></i> <strong> </br>Visit our </br>Etsy shop</strong> </a>
         </div>
-       
-          </div>
-          <div class="col-lg-6 d-flex justify-content-end">
-          </div>
-
-        </div>
-      </div>
-    </div>
-    </div>
+       </div>
+     </div> 
   </header>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
     <a class="navbar-brand" href="#"></a><img src="images/Logo.png" height="30" width="30" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,12 +68,8 @@
 
       </ul>
     </div>
+    </div>
   </nav>
-  
-
-
-
-  <main role="main">
 
     <section class="jumbotron text-center">
       <div class="container">
@@ -88,23 +79,28 @@
       </div>
     </section>
 
-    <div class="album py-5 bg-light">
+
+
+    <div class="card-deck py-5 bg-light">
       <div class="container">
 
         <div class="row">
+
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="images/22473368_1562922020434360_1379186797_o.jpg" alt="Card image cap">
+              <img class="card-img-top" src="images/Iva_Abstract_bowtie.jpg" alt="Card image cap">
               <div class="card-body">
-                <p class="card-text-bold ">Hey, you have made my day!</p>
+                <h5 class="card-title">Hey, you have made my day!</h5>
                 <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <div class="btn">
+                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#firstBlogModal">View</button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+  
+
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
               <img class="card-img-top" src="images/Monika-bootcamp.jpg" alt="Card image cap">
@@ -130,17 +126,41 @@
                 </div>
               </div>
             </div>
-          </div>
-          </div>
+          </div> 
+    </div>
+    </div>
+    </div>
 
-          <footer class="page-footer fixed-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-4 col-sm-2 offset-1">
+    <div class="modal fade" id="firstBlogModal" role="dialog">
+      <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+              <div class="modal-header bg-secondary text-white">
+              <h2 class="font-weight-bold ">Hey, you have made my day!</h2>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Today we got a new feedback from our customer Iva.</br> 
+                She chose the our <strong>Abstract monochrome bow tie </strong>and she liked it so much that she had to shared with us this feedback: “Hey, you have made my day! My friends haven’t stopped giving me compliments about my beautiful bow tie. </br>
+                Even people I don’t know have noticed it and I have seen their eyes lighted up in amazement, it is such an incredible feeling which, honestly, I have enjoyed a lot. When the bow tie arrived I was excited and felt in love imidiately in the very first momen whn t I saw it. The packiging was perfect and what I liked the most, was the handprinted label. Thank you, Jocose Tie!” </br>
+                And we thank you because you as all of our customers deserve the best, Iva and we are so pleased that you like your bow tie so much.</p>       
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+    </div>
+
+
+
+    <footer class="site-footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-4 col-sm-2 offset-1">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
                             <li><a href="#" style="color:white;">Home</a></li>
-                            <li><a href="aboutus.html" style="color:white;">Women</a></li>
+                            <li><a href="#" style="color:white;">Women</a></li>
                             <li><a href="#"style="color:white;">Men</a></li>
                         </ul>
                     </div>
@@ -164,5 +184,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
