--- a/index.html
+++ b/index.html
@@ -53,104 +53,117 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
+        <li class="nav-item active"><a class="nav-link" href="#"></i> Home</a></li>
         <li class="nav-item">
           <a class="nav-link" href="#">WOMEN</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">MEN</a>
         </li>
-        <li>
-          <a class="nav-link" href="#">Blog</a>
-        </li>
+        <li class="nav-item"><a class="nav-link"a class="nav-link" href="blog.html"></i>Blog</a></li>
 
       </ul>
     </div>
     </div>
   </nav>
 
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading">Jocose Tie Blog</h1> </br>
-        <p class="lead text-muted">"Do WE love accesories? Yes. </br>"Do WE know the secret to sew the most orginal ones? You bet!”</p>
-
-      </div>
-    </section>
-
-
-
-    <div class="card-deck py-5 bg-light">
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="images/Iva_Abstract_bowtie.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Hey, you have made my day!</h5>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#firstBlogModal">View</button>
-                  </div>
+    <section class="bg-light">
+            <div class="container">       
+  <div class="row align-items-center justify-content-center">
+        <h2 class="text-sm-right">Discover our Collection</h2>
+  </div>
+  <div class="row align-items-center justify-content-center">
+    <h2 class="text-sm-right text-light">&</h2> </div>
+  </div>
+  </section>
+  <div class="container">
+    <div class="row row-content">
+        <div class="col-md-8 mx-auto">
+            <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#homeCarousel" data-slide-to="1"></li>
+                    <li data-target="#homeCarousel" data-slide-to="2"></li>
+                    <li data-target="#homeCarousel" data-slide-to="3"></li>
+                    <li data-target="#homeCarousel" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="images/DSC_0890.jpg"
+                            alt="Floral & Birds necktie" />
+                        <div class="carousel-caption">
+                            <h3>Floral & Birds necktie</h3>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/IMG_3435.jpg" alt="Summer Flowers bow tie" />
+                        <div class="carousel-caption">
+                            <h3>Summer Flowers bow tie</h3>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/IMG_3443.jpg" alt="Purple flowers bow tie" />
+                        <div class="carousel-caption">
+                            <h3>Purple flowers bow tie</h3>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/DSC_0911.jpg" alt="Polka dot bow tie" />
+                        <div class="carousel-caption">
+                            <h3>Polka dot necktie</h3>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="images/DSC_0710.jpg" alt="Cluny lace bow tie" />
+                        <div class="carousel-caption">
+                            <h3>Cluny lace bow tie</h3>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-          </div>
-  
-
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="images/Monika-bootcamp.jpg" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Monika’s bow tie day</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="images/22580042_139314126636386_315722225590206464_n.jpg" alt="Card image cap">
-              <div class="card-body">
-                <p class="card-text">Drive your car with a bow-tie style! </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> 
-    </div>
-    </div>
-    </div>
-
-    <div class="modal fade" id="firstBlogModal" role="dialog">
-      <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-              <div class="modal-header bg-secondary text-white">
-              <h2 class="font-weight-bold ">Hey, you have made my day!</h2>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true" class="white-text">&times;</span>
+                <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+                <button class="btn btn-secondary btn-sm" id="carouselButton">
+                    <i class="fa fa-pause"></i>
                 </button>
-              </div>
-              <div class="modal-body">
-                Today we got a new feedback from our customer Iva.</br> 
-                She chose the our <strong>Abstract monochrome bow tie </strong>and she liked it so much that she had to shared with us this feedback: “Hey, you have made my day! My friends haven’t stopped giving me compliments about my beautiful bow tie. </br>
-                Even people I don’t know have noticed it and I have seen their eyes lighted up in amazement, it is such an incredible feeling which, honestly, I have enjoyed a lot. When the bow tie arrived I was excited and felt in love imidiately in the very first momen whn t I saw it. The packiging was perfect and what I liked the most, was the handprinted label. Thank you, Jocose Tie!” </br>
-                And we thank you because you as all of our customers deserve the best, Iva and we are so pleased that you like your bow tie so much.</p>       
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              </div>
-          </div>
-      </div>
+            </div>
+        </div>
     </div>
+</div>
+<section class="bg-light">
+    <div class="container">      
+<div class="row align-items-center justify-content-center">
+<h2 class="text-sm-right text-light">&</h2>
+</div>
+</div>
+</section>
 
+<div class="container">
+<div class="row">
+
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-header text-center text-white bg-secondary"> <h3>About us</h3>
+            </div>        
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">    
+                   <p> <strong>Jocose Tie is Iveta and Helena</strong>  <br>We are two friends and together we have totally changed our work lives to follow our passion for handmade neckties. It all started when we ourselves could not find original ties and bow ties for ladies and slowly we had to add men collections too because our ladies customers missed original and well-made bow ties for their men.
+                    <br>We love drawing own patterns, looking for or designing original fabrics, sewing our bow ties with love and passion for all important details and we enjoy personal messages that we can hand print to your bow tie label.
+                    And if you don´t see exactly the right bow tie for you in our actual collection. Do not hesitate to contact us and we will design the custom one for you.
+                    Enjoy shopping with us!</p>
+                </div>
+            </div>   
+        </div> 
+    </div>        
+</div>
+</div>
+<div class="row align-items-center justify-content-center">
+    <h2 class="text-sm-right text-light">&</h2> </div>             
 
 
     <footer class="site-footer">
@@ -162,13 +175,14 @@
                             <li><a href="#" style="color:white;">Home</a></li>
                             <li><a href="#" style="color:white;">Women</a></li>
                             <li><a href="#"style="color:white;">Men</a></li>
+                            <li><a href="blog.html"style="color:white;">Blog</a></li>
                         </ul>
                     </div>
                     <div class="col-4 col-sm-5 text-center">
                         <h5>Social</h5>
-                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/jocosetie_bowtie"><i class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/jocoseTie"><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/Jocose_Tie"><i class="fa fa-twitter"></i></a>
                     </div>
                     <div class="col-sm-4 text-center">
                         <a role="button" class="btn btn-link text-white" href="tel:+420602709269"><i class="fa fa-phone"></i> +420-602-709-269</a><br />
@@ -184,6 +198,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
