--- a/women.html
+++ b/women.html
@@ -41,31 +41,41 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo-icon.jpg" height="30" width="30" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#awesomeNavbar">
+            <a class="navbar-brand" href="#"></a><img src="images/Logo.png" height="30" width="30" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbar">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#"> Home</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#">Women</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html">Men</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">WOMEN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="men.html">MEN</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="blog.html">Blog</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container mt-5 mb-5" id="shady">
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-right">Stylish Motivation</h2>
             </div>
             <div class="col">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail" src="img/jocose-banner.jpg" alt="Jocose Banner" />
+                    <img class="d-flex mr-3 img-thumbnail" src="img/jocose-banner.jpg" alt="Jocose Banner" /> <br />
                 </div>
             </div>
         </div>
@@ -73,19 +83,19 @@
         <!--   Thumbnails Gallery   -->
 
 
-        <div id="containerT">
+        <div class="container mt-5 mb-5" id="thumb">
             <div class="row text-center text-lg-left">
-                <div class="col-lg-4 col-md-4 col-6">
+                <div class="col-lg-4 col-md-4 col-6 mb-4">
                     <img class="img-thumbnail"
                         src="https://raw.githubusercontent.com/Hel5Sou/Portfolio-Project/master/Images/IMG_3443.jpg"
                         alt="IMG_3443.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6">
+                <div class="col-lg-4 col-md-4 col-6 mb-4">
                     <img class="img-thumbnail"
                         src="https://raw.githubusercontent.com/Hel5Sou/Portfolio-Project/master/Images/DSC_0748.jpg"
                         alt="DSC_0748.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6">
+                <div class="col-lg-4 col-md-4 col-6 mb-4">
                     <img class="img-thumbnail"
                         src="https://raw.githubusercontent.com/Hel5Sou/Portfolio-Project/master/Images/DSC_0818.jpg"
                         alt="DSC_0895.jpg" />
@@ -93,17 +103,17 @@
             </div>
 
             <div class="row text-center text-lg-left">
-                <div class="col-lg-4 col-md-4 col-6">
+                <div class="col-lg-4 col-md-4 col-6 mb-4">
                     <img class="img-thumbnail"
                         src="https://raw.githubusercontent.com/Hel5Sou/Portfolio-Project/master/Images/DSC_0691.jpg"
                         alt="DSC_0748.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6">
+                <div class="col-lg-4 col-md-4 col-6 mb-4">
                     <img class="img-thumbnail"
                         src="https://raw.githubusercontent.com/Hel5Sou/Portfolio-Project/master/Images/DSC_0884.jpg"
                         alt="DSC_0895.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6">
+                <div class="col-lg-4 col-md-4 col-6 mb-4">
                     <img class="img-thumbnail"
                         src="https://raw.githubusercontent.com/Hel5Sou/Portfolio-Project/master/Images/DSC_0702.jpg"
                         alt="/DSC_0739.jpg" />
@@ -129,32 +139,37 @@
             </div>
         </div>
 
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-sm-2 offset-1">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" style="color:white;">Home</a></li>
+                        <li><a href="#" style="color:white;">Women</a></li>
+                        <li><a href="#" style="color:white;">Men</a></li>
+                        <li><a href="blog.html" style="color:white;">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="col-4 col-sm-5 text-center">
+                    <h5>Social</h5>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/jocosetie_bowtie"><i
+                            class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/jocoseTie"><i
+                            class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/Jocose_Tie"><i
+                            class="fa fa-twitter"></i></a>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <a role="button" class="btn btn-link text-white" href="tel:+420602709269"><i
+                            class="fa fa-phone"></i> +420-602-709-269</a><br />
+                    <a role="button" class="btn btn-link text-white" href="mailto:info@jocosetie.com"><i
+                            class="fa fa-envelope-o"></i> info@jocosetie.com</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-4 col-sm-2 offset-1">
-                              <h5>Links</h5>
-                              <ul class="list-unstyled">
-                                  <li><a href="#" style="color:white;">Home</a></li>
-                                  <li><a href="#" style="color:white;">Women</a></li>
-                                  <li><a href="#"style="color:white;">Men</a></li>
-                              </ul>
-                          </div>
-                          <div class="col-4 col-sm-5 text-center">
-                              <h5>Social</h5>
-                              <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                              <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                          </div>
-                          <div class="col-sm-4 text-center">
-                              <a role="button" class="btn btn-link text-white" href="tel:+420602709269"><i class="fa fa-phone"></i> +420-602-709-269</a><br />
-                              <a role="button" class="btn btn-link text-white" href="mailto:info@jocosetie.com"><i class="fa fa-envelope-o"></i> info@jocosetie.com</a>
-                          </div>
-                     </div>
-                  </div>
-              </footer>
-      
 </body>
 
 
